--- a/Darren Le Unit 4 Challenge - Tier 3.ipynb
+++ b/Darren Le Unit 4 Challenge - Tier 3.ipynb
@@ -9679,7 +9679,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Of the 32 London boroughs, Hackney, followed by Waltham Forest, followed by Southwark saw the greatest price increase from 1998 to 2018."
+    "# Of the 32 London boroughs, Hackney, followed by Waltham Forest, followed by Southwark, saw the greatest price increase from 1998 to 2018."
    ]
   }
  ],
